<resources>
    <string name="app_name">miSalleAndroid</string>
    <string name="app_version">v1.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logout">Salir</string>
    <!-- login -->
    <string name="enrollment">Matrícula</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Ingresar</string>

    <!-- menu -->
    <string name="title_home">Inicio</string>
    <string name="title_schedule">Horario</string>
    <string name="title_grades">Calificaciones</string>
    <string name="title_info">Info</string>
    <string name="title_sign_out">Salir</string>
    <!-- home -->
    <string name="next_class">Próxima clase </string>
    <string name="next_pay_due_date">Próximo pago</string>
    <string name="remaining_days">Días \nrestantes</string>
    <string name="tus_creditos">Tus créditos</string>
    <string name="cultural">cultural</string>
    <string name="deportivo">deportivo</string>
    <string name="social">social</string>
    <!-- list grades, schedule -->
    <string name="final_grade">Calificación final</string>
    <string name="absences">Faltas</string>
    <string name="partial1">Parcial 1</string>
    <string name="partial2">Parcial 2</string>
    <string name="partial3">Parcial 3</string>
    <string name="total_absences">Total de faltas:</string>
    <!-- pager -->
    <string name="monday">L</string>
    <string name="tuesday">M</string>
    <string name="wednesday">M</string>
    <string name="thursday">J</string>
    <string name="friday">V</string>
    <array name="letters_days_of_week">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
    </array>
    <!-- BottomSheep Profile Image -->
    <string name="from_camera">Tomar foto</string>
    <string name="from_gallery">Elegir foto</string>
    <string name="change_profile_image">Cambiar imagen de perfil</string>
    <!-- Error Messages -->
    <string name="internet_error">No se ha detectado una conexión a internet activa, intenta más tarde</string>
    <string name="wrong_credentials_error">Matrícula o contraseña incorrecta, verifica tus credenciales y vuelve a intentarlo</string>
    <string name="empty_credentials_error">Ingresa tus credenciales por favor</string>
    <!-- Loading -->
    <string name="loading">Cargando tu información...</string>
    <array name="months">
        <item>ENE</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>ABR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AGO</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DIC</item>
    </array>
</resources>
