<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_image"
        android:textStyle="bold"
        android:textSize="19dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorOrange"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lly_from_camera"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@mipmap/from_camera"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_camera"
            android:textSize="20dp"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/lly_from_gallery"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@mipmap/from_gallery"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_gallery"
            android:textSize="20dp"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>
</LinearLayout>