<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partial1"
                android:textColor="@color/colorDarkGray"
                android:textSize="14dp"/>
            <TextView
                android:id="@+id/txv_partial1_list_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="10"
                android:textColor="@color/colorDarkGray"
                android:textSize="18dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partial2"
                android:textColor="@color/colorDarkGray"
                android:textSize="14dp"/>
            <TextView
                android:id="@+id/txv_partial2_list_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="10"
                android:textColor="@color/colorDarkGray"
                android:textSize="18dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partial3"
                android:textColor="@color/colorDarkGray"
                android:textSize="14dp"/>
            <TextView
                android:id="@+id/txv_partial3_list_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="10"
                android:textColor="@color/colorDarkGray"
                android:textSize="18dp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"></LinearLayout>
</LinearLayout>