<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">
    <!-- Falta context -->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:background="@color/colorOrangeAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_class"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"/>
        <LinearLayout
            android:background="@color/colorOrangeAccent"
            android:layout_width="match_parent"
            android:layout_height="5dp"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="12dp"
            android:background="@mipmap/bg_white">
            <TextView
                android:id="@+id/txv_next_class_name_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre de la materia"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/ic_alarm"/>
                <TextView
                    android:id="@+id/txv_next_class_hour_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="4dp"
                    android:text="11:00-12:00"
                    android:textColor="@color/colorOrangeAccent"
                    android:textSize="13dp"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/ic_apple"/>
                <TextView
                    android:id="@+id/txv_next_class_teacher_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="4dp"
                    android:text="Nombre profe"
                    android:textColor="@color/colorOrangeAccent"
                    android:textSize="13dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txv_payment_header"
            android:background="@color/colorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_pay_due_date"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"/>
        <LinearLayout
            android:id="@+id/txv_payment_line_header"
            android:background="@color/colorBlue"
            android:layout_width="match_parent"
            android:layout_height="5dp"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="12dp"
            android:background="@mipmap/bg_white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="3dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/txv_pay_due_date_name_home"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Pago febrero 2017"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txv_due_date_date_home"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="vence: 10/02/2017"
                    android:textColor="@color/colorBlue"
                    android:textSize="13dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:text="@string/remaining_days"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txv_remaining_days_home"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:background="@drawable/circle_blue"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@mipmap/bg_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tus_creditos"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_spinner"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:id="@+id/_txv_refresh_creditos_home"
                android:layout_marginLeft="4dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="13dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:background="@drawable/rec_orange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/cultural"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txv_creditos_cultural_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text=""
                    android:textColor="@color/colorWhite"
                    android:textSize="47dp"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/rec_blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/deportivo"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txv_creditos_deportivo_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text=""
                    android:textColor="@color/colorWhite"
                    android:textSize="47dp"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/rec_green"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/social"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txv_creditos_social_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text=""
                    android:textColor="@color/colorWhite"
                    android:textSize="47dp"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>