<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="60dp"
            android:src="@mipmap/hd_logo_misalle_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_matricula_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:hint="@string/enrollment"
                android:inputType="numberSigned"
                android:maxLength="8"
                android:paddingBottom="14dp"
                android:textAlignment="center"
                android:textColor="@color/colorDarkGray" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_profile_black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:paddingBottom="14dp"
                android:textAlignment="center"
                android:textColor="@color/colorDarkGray" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_key_black" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="Campus: "
                android:textColor="@color/gray"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinner_campus_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="Nivel: "
                android:textAlignment="textEnd"
                android:textColor="@color/gray"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinner_sistema_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rounded_rec_orange"
            android:onClick="onLoginClick"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txv_privacidad_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Al iniciar sesión, aceptas nuestros términos y condiciones y aviso de privacidad"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>
